--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-<h1> 110-1 電腦動畫 作品集 </h1>
+<h1> 109-2 電腦動畫 作品集 </h1>
 
 <div>
   [檔案] <a href="https://github.com/kasoarcat/ca2021s/">街舞</a>
@@ -69,18 +69,35 @@
 </div>
 
 
-<h3> lab 2: MMD + Mixamo </h3>
+<h3> lab 2: Camtasia OpenPose 藤原千花 輝夜姬 書記舞</h3>
 <div>
-  心得: (約50字)
+  <table style="border-collapse: collapse; width: 0%; height: 126px;" border="1">
+    <tbody>
+    <tr style="height: 72px;">
+    <td style="width: 99.8471%; height: 72px;" colspan="2">心得: Camtasia可以製作影片，支援多種方式製作，此次實驗要讓藤原千花的Ending跳的書記舞加以改造，我使用了PoenPose作為主要設定，讓藤原千花與真人表演能夠標記骨架，其效果還不錯，不過因為影片是2D影格，無法直接在3D模型骨架套用，我查看PoenPose是支援3D Pose，只是需要兩個以上的拍攝影片。背景採用pattern拼接而成，並使用藤原千花PNG圖示，這樣就可以有好的呈現效果。</td>
+    </tr>
+    <tr style="height: 18px;">
+    <td style="width: 50%; height: 18px;">背景</td>
+    <td style="width: 49.8471%; height: 18px;">OpenPose</td>
+    </tr>
+    <tr style="height: 18px;">
+    <td style="width: 50%; height: 18px;"><a href="https://www.deviantart.com/ransie3/art/Pixel-Background-1-70198569">pattern</a></td>
+    <td style="width: 49.8471%; height: 36px;" rowspan="2"><a href="https://github.com/CMU-Perceptual-Computing-Lab/openpose/releases">windows版</a></td>
+    </tr>
+    <tr style="height: 18px;">
+    <td style="width: 50%; height: 18px;"><a href="https://baike.baidu.com/pic/%E8%97%A4%E5%8E%9F%E5%8D%83%E8%8A%B1/22622780/1/7a899e510fb30f246d8d73a4c695d143ad4b0305?fr=lemma&amp;ct=single#aid=1&amp;pic=7a899e510fb30f246d8d73a4c695d143ad4b0305">藤原千花圖像</a></td>
+    </tr>
+    </tbody>
+  </table>
 </div>
-<div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/kMQCERkTdO0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<div class="newplayer">
+  <iframe src="https://drive.google.com/file/d/1gGrqAohm9C7i_UQBHdYtPSfH-KPmkDGL/preview" width="560" height="315"></iframe>
 </div>
 
 
-<h3> lab 3: </h3>
+<h3> lab 3: MMD + Mixamo</h3>
 <div>
-
+  心得: 彌豆子，炭之郎，下玄五， 真人，動漫跳書記舞，音樂
 </div>
 
 
