--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 <body>
 
 <h1> 109-2 電腦動畫 作品集 </h1>
-
 <div>
   [檔案] <a href="https://github.com/kasoarcat/ca2021s/">街舞</a>
   <hr>
@@ -60,16 +59,25 @@
 </div>
 
 
+
+
+
 <h3> lab 1: VRoid + Mixamo </h3>
-<div>
-  心得: Mixamo擁有許對模型與動作，而且是免費，很容易匯入至Unity使用，動作細節都很正常，而在Unity可以有手部關節，應該沒有這方面的手部骨架。而VRoid可以建立角色並微調角色各種細節，但是附件部分設計並無法廣泛推廣，多數還是透過換材質做法，而且在BOOTH網站可以下載模型或是附件，如換衣服髮型，但多數都是要付費，而在Vroid Hub可以下載官方模型，但一般創作者製作的模型多數無法下載，在匯入Unity可直接使用，相容性極高。而MMD的模型可能在Unity需要注意，匯入Unity容易有狀況，在轉換骨架時可能會有異常，可能是因為骨架不是T-Pose。在製作動畫需要注意的是軌道攝影機不大好操作，需時間適應。
-</div>
 <div>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QdgUwbn-FJ0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+<div>
+  心得: Mixamo擁有許對模型與動作，而且是免費，很容易匯入至Unity使用，動作細節都很正常，而在Unity可以有手部關節，應該沒有這方面的手部骨架。而VRoid可以建立角色並微調角色各種細節，但是附件部分設計並無法廣泛推廣，多數還是透過換材質做法，而且在BOOTH網站可以下載模型或是附件，如換衣服髮型，但多數都是要付費，而在Vroid Hub可以下載官方模型，但一般創作者製作的模型多數無法下載，在匯入Unity可直接使用，相容性極高。而MMD的模型可能在Unity需要注意，匯入Unity容易有狀況，在轉換骨架時可能會有異常，可能是因為骨架不是T-Pose。在製作動畫需要注意的是軌道攝影機不大好操作，需時間適應。
+</div>
 
 
-<h3> lab 2: Camtasia OpenPose 藤原千花 輝夜姬 書記舞</h3>
+
+
+
+<h3> lab 2-1: Camtasia OpenPose 藤原千花 輝夜姬 書記舞</h3>
+<div class="newplayer">
+  <iframe src="https://drive.google.com/file/d/1gGrqAohm9C7i_UQBHdYtPSfH-KPmkDGL/preview" width="560" height="315"></iframe>
+</div>
 <div>
   <table style="border-collapse: collapse; width: 0%; height: 126px;" border="1">
     <tbody>
@@ -90,27 +98,80 @@
     </tbody>
   </table>
 </div>
+
+
+
+
+
+<h3> lab 2-2: MMD 末永未來-DEEP BLUE TOWN</h3>
 <div class="newplayer">
-  <iframe src="https://drive.google.com/file/d/1gGrqAohm9C7i_UQBHdYtPSfH-KPmkDGL/preview" width="560" height="315"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQMD5XhDddM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+<div>
+  <table border="1">
+  <tbody>
+  <tr style="height: 72px;">
+  <td style="width: 99.8471%; height: 72px;" colspan="2">心得: MMD功能強大，因為是免費軟體，有大量的社群網路的免費資源，也有強大的外掛，此次實驗嘗試使用Raycast特效，光影效果設定上面得宜，就會有好的呈現，主角為末永未來搭配音樂與動作可以呈現生動的效果，輸出可以能夠有呈現4K60FPS畫質，因為MMD只支援WAV音軌，可以嘗試轉換FLAC，要注意音軌與影片要對齊。</td>
+  </tr>
+  <tr>
+  <td>名稱</td>
+  <td>來源</td>
+  </tr>
+  <tr>
+  <td>[特效] cray-mmd-1.5.1</td>
+  <td><a title="https://github.com/ray-cast/ray-mmd" href="https://github.com/ray-cast/ray-mmd">https://github.com/ray-cast/ray-mmd</a></td>
+  </tr>
+  <tr>
+  <td>[場景] ロマンス司書室</td>
+  <td><a title="https://seiga.nicovideo.jp/seiga/im6619632" href="https://seiga.nicovideo.jp/seiga/im6619632">https://seiga.nicovideo.jp/seiga/im6619632</a></td>
+  </tr>
+  <tr>
+  <td>[TUTORIAL] [MMD] Rendering with Raycast 1.5.1
+  </td>
+  <td><a href="https://www.youtube.com/watch?v=SjtIukxz274">https://www.youtube.com/watch?v=SjtIukxz274</a></td>
+  </tr>
+  <tr>
+  <td>[model] 末永未來
+  </td>
+  <td><a href="https://www.deviantart.com/vanilla-cocoflake/art/mmd-Kakomiki-Mirai-Suenaga-download-815934815">https://www.deviantart.com/vanilla-cocoflake/art/mmd-Kakomiki-Mirai-Suenaga-download-815934815</a></td>
+  </tr>
+  <tr>
+  <td>[motion&amp;music] iMarine_DeepBlueTown_he_Oideyo_dance</td>
+  <td><a title="http://tstorage.info/oqwpjj3ihwaj" href="http://tstorage.info/oqwpjj3ihwaj">http://tstorage.info/oqwpjj3ihwaj</a></td>
+  </tr>
+  <tr>
+  <td>如何快速輸出4K 60fps MMD
+  </td>
+  <td><a title="https://www.bilibili.com/read/cv3520201/" href="https://www.bilibili.com/read/cv3520201/">https://www.bilibili.com/read/cv3520201/</a></td>
+  </tr>
+  </tbody>
+  </table>
+</div>
+
+
+
 
 
 <h3> lab 3: MMD + Mixamo</h3>
 <div>
-  心得: 彌豆子，炭之郎，下玄五， 真人，動漫跳書記舞，音樂
+  心得: 
 </div>
 
 
-<h3> lab 4: </h3>
-<div>
 
-</div>
+
+
+<h3> lab 4</h3>
+<div>心得: </div>
+
+
+
 
 
 <h3> lab 5: </h3>
-<div>
+<div></div>
 
-</div>
+
 
 
 
