--- a/index.html
+++ b/index.html
@@ -152,13 +152,28 @@
 
 
 
-<h3> lab 3: MMD + Mixamo</h3>
-<div>
-  心得: 
+<h3> lab 3: three.js</h3>
+<div class="newplayer">
+  <iframe width="560" height="315" src="https://player.vimeo.com/video/540954817?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
-
-
-
+<div>
+<table border="1">
+  <tbody>
+    <tr style="height: 72px;">
+      <td style="width: 99.8471%; height: 72px;" colspan="2">心得: 此次實驗是在three.js上呈現mmd的動畫，不過需要了解javascript的函式庫，並不容易，於是改用Shadow Editor這個開源項目，功能上面雖然沒有mmd強，如果打算夠即時在client端呈現3D動畫，是不錯的方式。Shadow Editor可以像mmd編輯，功能類似，可以做出相應的功能，不過還是使用mmd較方便。</td>
+    </tr>
+    <tr>
+      <td>資源清單</td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/ShadowEditor/ShadowEditor/blob/master/README_zh.md">three.js mmd編輯器：Shadow Editor</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://www.deviantart.com/dan1024/art/2021-Update-PDFT-Secret-Garden-Stage-Download-472563499">場景：PDFT Secret Garden Stage</a></td>
+    </tr>
+  </tbody>
+</table>
+</div>
 
 
 <h3> lab 4</h3>
