--- a/index.html
+++ b/index.html
@@ -176,8 +176,34 @@
 </div>
 
 
-<h3> lab 4</h3>
-<div>心得: </div>
+<h3> lab 4 unity千花</h3>
+<div class="newplayer">
+  <iframe width="560" height="315" src="https://player.vimeo.com/video/549775407?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div>
+<table border="1">
+  <tbody>
+    <tr style="height: 72px;">
+      <td style="width: 99.8471%; height: 72px;" colspan="2">心得: Unity的功能確實多了許多，不過操作也更加複雜，版本也很多，因此外掛相容性也就容易有狀況，這次裙子並不知道為何沒有選項可以調整。而在Asset Store有許多的資源可以使用，多數都是付費，但也有免費的，我試了粒子效果。窗外的地形也是使用現成的地形，雖然試圖起風，草是有作用，但不知樹沒有風，也用了WindZone也沒效。天空圖採用全景圖UHD 8K，但因為室內場景也只能看到一點點藍色，後製使用Camtasia，也加上半透明的字幕，整體而言Unity可以呈現更豐富的效果。</td>
+    </tr>
+    <tr>
+      <td>資源清單</td>
+    </tr>
+    <tr>
+      <td><a href="https://assetstore.unity.com/packages/3d/environments/hand-painted-nature-kit-lite-69220">背景地形</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://bowlroll.net/file/133177">場景 密碼： 何にしようか　悩んでる</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://assetstore.unity.com/packages/3d/magic-particle-systems-lite-95868">粒子系統 Magic Particle Systems Lite</a></td>
+    </tr>
+    <tr>
+      <td><a href="https://assetstore.unity.com/packages/3d/environments/all-packages-demo-97726">天空盒 All Packages Demo</a></td>
+    </tr>
+  </tbody>
+</table>
+</div>
 
 
 
