--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <h3> lab 2-1: Camtasia OpenPose 藤原千花 輝夜姬 書記舞</h3>
 <div class="newplayer">
-  <iframe src="https://drive.google.com/file/d/1gGrqAohm9C7i_UQBHdYtPSfH-KPmkDGL/preview" width="560" height="315"></iframe>
+  <iframe src="https://drive.google.com/file/d/1bMkP-Ovwikt78DdGSB-ObZ3pJNWaxa1D/preview" width="560" height="315"></iframe>
 </div>
 <div>
   <table style="border-collapse: collapse; width: 0%; height: 126px;" border="1">
@@ -193,7 +193,7 @@
       <td><a href="https://assetstore.unity.com/packages/3d/environments/hand-painted-nature-kit-lite-69220">背景地形</a></td>
     </tr>
     <tr>
-      <td><a href="https://bowlroll.net/file/133177">場景 密碼： 何にしようか　悩んでる</a></td>
+      <td><a href="https://bowlroll.net/file/133177">場景 密碼：何にしようか　悩んでる</a></td>
     </tr>
     <tr>
       <td><a href="https://assetstore.unity.com/packages/3d/magic-particle-systems-lite-95868">粒子系統 Magic Particle Systems Lite</a></td>
@@ -208,11 +208,31 @@
 
 
 
-
-<h3> lab 5: </h3>
-<div></div>
-
-
+<h3>Lab5 鬼滅之刃經典爆頭動畫</h3>
+<div class="newplayer">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/EQ0JaJoC-9w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div>
+<table border="1">
+  <tbody>
+    <tr style="height: 72px;">
+      <td style="width: 99.8471%; height: 72px;" colspan="2">心得: 此次實現雖然時動畫時間很短，但卻是最難的，因為有大量的細節變化。因此在實作上遇到的難題就是需要做出每個細緻部分的氣魄，首先尋找場景的佈置，森林需要有樹並呈現深夜，地板選擇龜裂的土地，草與樹都要可以動，使用URP使得畫質有所提升，並套用Toon Shader，有個缺點是有些材質不支援，呈現粉紅色，雖然可以修復，但有時不行，因此MMD的模型材質就變粉紅色，無法修復，只好不使用MMD，改MMD轉FBX。炭之郎手上的斷劍加上了點光源，只要將點光源拖曳到炭之郎的手上，而揮刀時加上打擊的揮劍特效，並加上圓形的拖尾。並且需要加上震動效果，炭之郎加上火焰襯托，周遭需要有粒子飛行，使用螢火蟲的粒子與高速璇轉粒子，而因為使用了FBX反而無法像MMD可已分離部分，因此改採用FBX分割方式實現，並具有物理引擎，因此頭可以自由滾動，後製部分把原動畫的音效加入。
+      </td>
+    </tr>
+    <tr>
+      <td>資源清單</td>
+    </tr>
+    <tr><td><a href="http://unityassetcollection.com/fx_swordeffects_volume01-free-download/">FX_SwordEffects_Volume01</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/anime-particles-pack-free-download/">Anime Particles Pack</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/ultimate-vfx-free-download/">Ultimate VFX</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/realistic-grass-flowers-pack-free-download/">Realistic Grass Flowers Pack</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/mountain-trees-dynamic-nature-free-download/">Mountain Trees</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/sword-slashes-pro-free-download/">Sword slashes PRO</a></td></tr>
+    <tr><td><a href="http://unityassetcollection.com/ragdoll-dismemberment-system-free-download/">Ragdoll dismemberment system</a></td></tr>
+    <tr><td><a href="https://www.youtube.com/watch?v=9A9yj8KnM8c">CAMERA SHAKE</a></td></tr>
+  </tbody>
+</table>
+</div>
 
 
 
