--- a/index.html
+++ b/index.html
@@ -236,5 +236,33 @@
 
 
 
+<h3>Final Project</h3>
+
+<div class="newplayer">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/daEKCwfGvog" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/UnL1xWFTi44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+
+<div>
+<table border="1">
+  <tbody>
+    <tr style="height: 72px;">
+      <td style="width: 99.8471%; height: 72px;" colspan="2">心得: 此次實驗嘗試了一些進階的方式，透過Deep Motion來捕捉動畫，雖然效果不是很好，但可以知道目前AI應用在動態捕捉的缺點。而炭之郎火焰劍特效，有找到很棒的VFX Graph，可以實現原味的效果，只是因為沒時間學習這套強大的特效系統，至於背景的天空盒特別選擇黑暗的陰森場景，搭配樹木與草的大風效應，也為了配合大風的火焰劍，樹木特別鋪上雪的效果，形成很大的反差，另攝影機取景特別放在草地上，有種背地裡觀看戰鬥的感覺，火焰劍本生的火的效果，與產生的煙霧，可以增加其真實感，在後製部分，4K添加字幕與音樂，當然也提供無字幕無音樂版本。
+      </td>
+    </tr>
+    <tr>
+      <td>資源清單</td><td>連結</td>
+    </tr>
+    <tr><td>下玄五姿勢</td><td><a href="https://portal.deepmotion.com/">Deep Motion</a></td></tr>
+    <tr><td>天空盒</td><td><a href="https://unityassets4free.com/allsky-200-sky-skybox-set/2/">allsky</a></td></tr>
+    <tr><td>樹木草皮</td><td><a href="http://unityassetcollection.com/the-vegetation-engine-free-download/">The Vegetation Engine</a></td></tr>
+    <tr><td>炭之郎火焰劍特效</td><td><a href="http://unityassetcollection.com/the-vegetation-engine-free-download/">CamelotVFX: Fire & Smoke</a></td></tr>
+    <tr><td>炭之郎拿持劍跑步</td><td><a href="https://www.mixamo.com/#/?page=1&query=great+Sword+run">Great Sword Run</a></td></tr>
+  </tbody>
+</table>
+</div>
+
+
+
 </body>
 </html>
